--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@relume_io/relume-tailwind": "^0.0.10",
+    "@relume_io/relume-ui": "^0.0.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.1.7",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
